gccida/c0/record_operand_costs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1439:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modes[30]; // [rsp+130h] [rbp-190h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1448:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_operands; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1450:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
constraints[i] = recog_data_0.constraints[i]; 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1451:12: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
modes[i] = recog_data_0.operand_mode[i]; 
           ^~~~~~~~~~~~
           recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1453:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_operands; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1456:37: error: use of undeclared identifier 'recog_data_0'
if ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[i] == 63 ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1458:9: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
inner = recog_data_0.operand[i]->fld[0].rtx; 
        ^~~~~~~~~~~~
        recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1459:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[i] = inner; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1461:37: error: use of undeclared identifier 'recog_data_0'
if ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[i] == 66 ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1463:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
record_address_regs( recog_data_0.operand[i]->fld[0].rtx, GENERAL_REGS, 2 * frequency); 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1467:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
record_address_regs( recog_data_0.operand[i], GENERAL_REGS, 2 * frequency); 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1470:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_operands - 1; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1474:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( j = 0; j < recog_data_0.n_operands; ++j ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1479:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1480:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_operands, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1481:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1490:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1491:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_operands, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/regclass.c:1492:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_operand_costs/src/obj/regclass.o] Error 1
